load("@mostrobotpy_tests_pip_deps//:requirements.bzl", "requirement")
load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:file_resolver_utils.bzl", "local_extension_util", "local_pc_file_util")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-wpimath:generated_build_info.bzl", "define_pybind_library", "publish_library_casters", "wpimath_controls_extension", "wpimath_extension", "wpimath_filter_extension", "wpimath_geometry_extension", "wpimath_interpolation_extension", "wpimath_kinematics_extension", "wpimath_spline_extension")

generate_build_info(
    name = "wpimath",
    local_pkgcfgs =
        local_pc_file_util(
            "//subprojects/robotpy-native-wpimath",
            ["native/wpimath/robotpy-native-wpimath.pc"],
        ) +
        local_pc_file_util(
            "//subprojects/robotpy-native-wpiutil",
            ["native/wpiutil/robotpy-native-wpiutil.pc"],
        ) +
        local_pc_file_util(
            "//subprojects/robotpy-wpiutil",
            [
                "wpiutil/wpiutil.pc",
                "wpiutil/wpiutil-casters.pc",
                "wpiutil/wpiutil-casters.pybind11.json",
            ],
        ),
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/**/*.yml"]),
)

publish_library_casters(
    typecasters_srcs = glob([
        "wpimath/_impl/src/**",
    ]),
)

wpimath_extension(
    entry_point = ["wpimath/src/wpimath.cpp"],
    extra_hdrs = glob(["wpimath/_impl/src/**/*.h"]),
    header_to_dat_deps = glob(["wpimath/_impl/src/**/*.h"]),
    includes = [
        "wpimath/_impl/src",
        "wpimath/_impl/src/type_casters",
    ],
    deps = [
        "//subprojects/robotpy-native-wpimath:wpimath",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

wpimath_filter_extension(
    entry_point = ["wpimath/filter/filter.cpp"],
    extension_name = "_filter",
    header_to_dat_deps = glob(["wpimath/_impl/src/**/*.h"]),
    deps = [
        ":wpimath_pybind_library",
        "//subprojects/robotpy-native-wpimath:wpimath",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

wpimath_geometry_extension(
    entry_point = ["wpimath/geometry/geometry.cpp"],
    extension_name = "_geometry",
    extra_hdrs = glob(["wpimath/geometry/include/rpy/*"]),
    extra_pyi_deps = [requirement("numpy")],
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    includes = ["wpimath/geometry/include"],
    deps = [
        ":wpimath_pybind_library",
        "//subprojects/robotpy-native-wpimath:wpimath",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

wpimath_interpolation_extension(
    entry_point = ["wpimath/interpolation/interpolation.cpp"],
    extension_name = "_interpolation",
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    deps = [
        ":wpimath_geometry_pybind_library",
        ":wpimath_pybind_library",
        "//subprojects/robotpy-native-wpimath:wpimath",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

wpimath_kinematics_extension(
    entry_point = ["wpimath/kinematics/kinematics.cpp"],
    extension_name = "_kinematics",
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    deps = [
        ":wpimath_geometry_pybind_library",
        ":wpimath_pybind_library",
        "//subprojects/robotpy-native-wpimath:wpimath",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

wpimath_spline_extension(
    entry_point = ["wpimath/spline/spline.cpp"],
    extension_name = "_spline",
    extra_pyi_deps = [requirement("numpy")],
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    deps = [
        ":wpimath_geometry_pybind_library",
        ":wpimath_pybind_library",
        "//subprojects/robotpy-native-wpimath:wpimath",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

wpimath_controls_extension(
    entry_point = ["wpimath/_controls/controls.cpp"],
    extension_name = "_controls",
    extra_pyi_deps = [requirement("numpy")],
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    deps = [
        ":wpimath_geometry_pybind_library",
        ":wpimath_kinematics_pybind_library",
        ":wpimath_pybind_library",
        ":wpimath_spline_pybind_library",
        "//subprojects/robotpy-native-wpimath:wpimath",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

define_pybind_library(
    name = "wpimath",
    version = MOSTROBOTPY_VERSION,
)
