load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-wpinet:generated_build_info.bzl", "define_pybind_library", "wpinet_extension")

generate_build_info(
    name = "wpinet",
    local_libraries = [
        "//subprojects/robotpy-native-wpiutil:import",
        "//subprojects/robotpy-native-wpinet:import",
        "//subprojects/robotpy-wpiutil:import",
    ],
    pkgcfgs = [
        "$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc",
        "$(location //subprojects/robotpy-native-wpinet:import)/site-packages/native/wpinet/robotpy-native-wpinet.pc",
        "$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc",
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/*.yml"]),
)

wpinet_extension(
    entry_point = ["wpinet/src/main.cpp"],
    deps = [
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "//subprojects/robotpy-native-wpinet:wpinet",
    ],
)

define_pybind_library(
    name = "wpinet",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "wpinet.generated_files",
    ],
    visibility = ["//visibility:public"],
)
