load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:file_resolver_utils.bzl", "local_extension_util", "local_pc_file_util")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-wpinet:generated_build_info.bzl", "define_pybind_library", "wpinet_extension")

generate_build_info(
    name = "wpinet",
    local_pkgcfgs = local_pc_file_util(
                        "//subprojects/robotpy-native-wpiutil",
                        ["native/wpiutil/robotpy-native-wpiutil.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-wpinet",
                        ["native/wpinet/robotpy-native-wpinet.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-wpiutil",
                        [
                            "wpiutil/wpiutil.pc",
                            "wpiutil/wpiutil-casters.pc",
                            "wpiutil/wpiutil-casters.pybind11.json",
                        ],
                    ),
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/*.yml"]),
)

wpinet_extension(
    entry_point = ["wpinet/src/main.cpp"],
    deps = [
        "//subprojects/robotpy-native-wpinet:wpinet",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

define_pybind_library(
    name = "wpinet",
    version = MOSTROBOTPY_VERSION,
)
