load("@rules_semiwrap//:defs.bzl", "copy_extension_library", "make_pyi", "robotpy_library")
load("//:version.bzl", "VERSION")
load("//subprojects/robotpy-wpiutil:generated_build_info.bzl", "publish_library_casters", "wpiutil_extension")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")

generate_build_info(
    name = "wpiutil",
    yaml_files = glob(["semiwrap/*.yml"]),
    local_libraries = [
        "//subprojects/robotpy-native-wpiutil:import",
    ],
    pyproject_toml = ":pyproject.toml",
)


publish_library_casters(
    typecasters_srcs = glob([
        "wpiutil/src/type_casters/**",
        "wpiutil/src/wpistruct/**",
    ]),
)

wpiutil_extension(
    entry_point = ["wpiutil/src/main.cpp"],
    extra_hdrs = glob([
        "wpiutil/src/type_casters/*.h",
        "wpiutil/src/wpistruct/*.h",
    ]),
    extra_srcs = glob(
        ["wpiutil/src/**/*.cpp"],
        exclude = ["wpiutil/src/main.cpp"],
    ),
    header_to_dat_deps = [
        # "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
    ],
    includes = [
        "wpiutil/",
        "wpiutil/src/type_casters",
        "wpiutil/src/wpistruct",
    ],
    deps = [],
    # deps = ["@bzlmodrio-allwpilib//libraries/cpp/wpiutil:shared"],
)

make_pyi(
    name = "make_pyi1",
)

copy_extension_library(
    name = "copy_wpiutil",
    extension = "_wpiutil",
    output_directory = "wpiutil/",
)

robotpy_library(
    name = "wpiutil",
    package_name = "robotpy-wpiutil",
    srcs = glob(["wpiutil/**/*.py"]) + ["wpiutil/_init__wpiutil.py"],
    data = [":copy_wpiutil"],
    imports = ["."],
    robotpy_wheel_deps = ["//subprojects/robotpy-native-wpiutil:import"],
    strip_path_prefixes = ["subprojects/robotpy-wpiutil"],
    version = VERSION,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "generated_files",
    srcs = [
        "wpiutil.generated_files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
