load("@rules_semiwrap//:defs.bzl", "copy_extension_library", "make_pyi", "robotpy_library")
load("//:version.bzl", "VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-wpiutil:generated_build_info.bzl", "move_extension_modules", "libinit_files", "publish_library_casters", "wpiutil_extension")

generate_build_info(
    name = "wpiutil",
    local_libraries = [
        "//subprojects/robotpy-native-wpiutil:import",
    ],
    pkgcfgs = ["$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc"],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/*.yml"]),
)

publish_library_casters(
    typecasters_srcs = glob([
        "wpiutil/src/type_casters/**",
        "wpiutil/src/wpistruct/**",
    ]),
)

wpiutil_extension(
    entry_point = ["wpiutil/src/main.cpp"],
    extra_hdrs = glob([
        "wpiutil/src/type_casters/*.h",
        "wpiutil/src/wpistruct/*.h",
    ]),
    extra_srcs = glob(
        ["wpiutil/src/**/*.cpp"],
        exclude = ["wpiutil/src/main.cpp"],
    ),
    header_to_dat_deps = [
        # "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
    ],
    includes = [
        "wpiutil/",
        "wpiutil/src/type_casters",
        "wpiutil/src/wpistruct",
    ],
    # deps = [],
    deps = ["@bzlmodrio-allwpilib//libraries/cpp/wpiutil:shared"],
)

make_pyi(
    name = "make_pyi1",
)

robotpy_library(
    name = "wpiutil",
    package_name = "robotpy-wpiutil",
    srcs = glob(["wpiutil/**/*.py"]) + libinit_files(),
    data = move_extension_modules(),
    imports = ["."],
    robotpy_wheel_deps = ["//subprojects/robotpy-native-wpiutil:import"],
    strip_path_prefixes = ["subprojects/robotpy-wpiutil"],
    version = VERSION,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "generated_files",
    srcs = [
        "wpiutil.generated_files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
