load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-wpiutil:generated_build_info.bzl", "define_pybind_library", "publish_library_casters", "wpiutil_extension")

generate_build_info(
    name = "wpiutil",
    additional_srcs = ["wpiutil/src/wpistruct/wpystruct_fns.h"],
    local_pkgcfgs = [
        ("//subprojects/robotpy-native-wpiutil:import", ["$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc"]),
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/*.yml"]),
)

publish_library_casters(
    typecasters_srcs = glob([
        "wpiutil/src/type_casters/**",
        "wpiutil/src/wpistruct/**",
    ]),
)

wpiutil_extension(
    entry_point = ["wpiutil/src/main.cpp"],
    extra_hdrs = glob([
        "wpiutil/src/type_casters/*.h",
        "wpiutil/src/wpistruct/*.h",
    ]),
    extra_srcs = glob(
        ["wpiutil/src/**/*.cpp"],
        exclude = ["wpiutil/src/main.cpp"],
    ),
    includes = [
        "wpiutil/",
        "wpiutil/src/type_casters",
        "wpiutil/src/wpistruct",
    ],
    # deps = [],
    deps = ["//subprojects/robotpy-native-wpiutil:wpiutil"],
)

# filegroup(
#     name = "srcs",
#     srcs = glob(["wpiutil/src/**"]),
# )

define_pybind_library(
    name = "wpiutil",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "wpiutil.generated_files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
