load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-xrp:generated_build_info.bzl", "define_pybind_library", "xrp_extension")
load("//bazel_scripts:file_resolver_utils.bzl", "local_pc_file_util")

generate_build_info(
    name = "xrp",
    local_pkgcfgs = [
        ("//subprojects/robotpy-native-xrp:import", ["$(location //subprojects/robotpy-native-xrp:import)/site-packages/native/xrp/robotpy-native-xrp.pc"]),
        ("//subprojects/robotpy-native-wpimath:import", ["$(location //subprojects/robotpy-native-wpimath:import)/site-packages/native/wpimath/robotpy-native-wpimath.pc"]),
        ("//subprojects/robotpy-native-wpiutil:import", ["$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc"]),
        ("//subprojects/robotpy-native-wpilib:import", ["$(location //subprojects/robotpy-native-wpilib:import)/site-packages/native/wpilib/robotpy-native-wpilib.pc"]),
        ("//subprojects/robotpy-native-wpihal:import", ["$(location //subprojects/robotpy-native-wpihal:import)/site-packages/native/wpihal/robotpy-native-wpihal.pc"]),
        ("//subprojects/robotpy-native-wpinet:import", ["$(location //subprojects/robotpy-native-wpinet:import)/site-packages/native/wpinet/robotpy-native-wpinet.pc"]),
        ("//subprojects/robotpy-native-ntcore:import", ["$(location //subprojects/robotpy-native-ntcore:import)/site-packages/native/ntcore/robotpy-native-ntcore.pc"]),
    ] + local_pc_file_util("//subprojects/robotpy-wpiutil", ["wpiutil/wpiutil.pc", "wpiutil/wpiutil-casters.pc", "wpiutil/wpiutil-casters.pybind11.json"])
      + local_pc_file_util("//subprojects/pyntcore", ["ntcore/ntcore.pc"])
      + local_pc_file_util("//subprojects/robotpy-wpinet", ["wpinet/wpinet.pc"])
      + local_pc_file_util("//subprojects/robotpy-hal", ["hal/wpihal.pc"])
      + local_pc_file_util("//subprojects/robotpy-wpimath", [
        "wpimath/wpimath.pc", 
        "wpimath/wpimath-casters.pc", 
        "wpimath/geometry/wpimath_geometry.pc", 
        "wpimath/filter/wpimath_filter.pc", 
        "wpimath/_controls/wpimath_controls.pc", 
        "wpimath/kinematics/wpimath_kinematics.pc", 
        "wpimath/spline/wpimath_spline.pc",
        "wpimath/wpimath-casters.pybind11.json",
    ])
      + local_pc_file_util("//subprojects/robotpy-wpilib", [
            "wpilib/wpilib.pc",
            "wpilib/interfaces/wpilib_interfaces.pc",
            "wpilib/event/wpilib_event.pc",
    ]),
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/**/*.yml"]),
)

xrp_extension(
    entry_point = ["xrp/src/main.cpp"],
    deps = [
        "//subprojects/robotpy-native-xrp:xrp",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
    ],
)

define_pybind_library(
    name = "xrp",
    extra_entry_points = {"robotpysimext": ["xrp = xrp.extension"]},
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "xrp.generated_files",
    ],
    visibility = ["//visibility:public"],
)
